规则注册自动推导泛型